# canadaopendata

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: __main__.py
src/opencanada/: __init__.py  _inventory.py  api.py  datasets.py  exceptions.py  indexes.py  settings.py  utils.py
tests/: read_excel.py  test_api.py  test_config.py  test_datasets.py  test_inventory.py  test_metadata.py
tests/data/: inventory.xlsx  package.json  package_noresources.json
