[tool.poetry]
name = "canada-opendata"
version = "0.1.0"
description = ""
authors = ["Dwight Gunning <dgunning@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"
pyarrow = "^6.0.1"
rich = "^10.14.0"
dynaconf = "^3.1.7"
bs4 = "^0.0.1"
lxml = "^4.6.4"
html5lib = "^1.1"
requests = "^2.26.0"
typer = "^0.4.0"
Jinja2 = "^3.0.3"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
nox = "^2021.10.1"
black = "^21.11b1"
flit = "^3.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
